Fix #7609 - Print message in the current view (modal) and not in a ne… (#7621)
* Fix #7609 - Print message in the current view (modal) and not in a new tab

* Review style and add attachments list

* Use iconAttachment directive

* Review

* Review

* Improve style during printing

* Review

* Enhanced/fix print modal

As the modal is before the app, hid everything else and adapted the modal print styles.

- `position: fixed` was truncating content, better using standard positionning using `position: static`
- fixed Edge crazy scrollbar printing bug
- fixed attachments text display
- tried to avoid breaking page inside attachments - normally the browser should respect `page-break-inside: avoid;` 

Okay for me on Firefox/Chrome/Edge

* Review code

* Review

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -267,3 +267,16 @@ fieldset legend {
 .no-outline {
 	outline: none;
 }
+
+.code {
+	font-family: monospace;
+	color: $black;
+	border-radius: 2px;
+	max-width: 100%;
+	line-height: 1.35rem;
+	overflow: auto;
+	word-break: break-all;
+	white-space: normal;
+	padding: 0 .5rem;
+	background-color: rgba(0,0,0,.06);
+}
