--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -47,18 +47,6 @@ body .pm_form textarea[readonly] {
   font-size: 1em;
 }
 
-code {
-	font-family: monospace;
-	color: $black;
-	border-radius: 2px;
-	max-width: 100%;
-	line-height: 1.35rem;
-	overflow: auto;
-	word-break: break-all;
-	white-space: normal;
-	padding: 0 .5rem;
-	background-color: rgba(0,0,0,.06);
-}
 p code {
 	display: inline;
 }
